# porthole

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  killer.rs  labels.rs  lib.rs  lsof.rs  main.rs  settings.rs  stack.rs
src/components/: EmptyState.tsx  LabelEditor.tsx  PortList.tsx  PortRow.tsx  Settings.tsx  StackIcon.tsx
src/hooks/: usePorts.ts  useSettings.ts
src/lib/: tauri.ts
