[package]
name = "porthole"
version = "0.1.0"
description = "A macOS menu bar app that shows every active localhost TCP port"
license = "MIT"
edition = "2021"

[lib]
name = "porthole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "porthole"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
libc = "0.2"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
